--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,14 +22,14 @@
                     <li *ngFor="let o of optionsMenu" class="opt-navbar nav-item">
                         <div (mouseenter)="onMouseEnter($event, o)">
 
-                            <a (click)="changeRouter(o)"  id="inicio" #rla="routerLinkActive" (mouseenter)="onMouseEnter($event, o)" (mouseenter)="langMenuLeave() " [routerLink]="['/' + o.routerLink]"
+                            <a  id="inicio" #rla="routerLinkActive" (mouseenter)="onMouseEnter($event, o)" (mouseenter)="langMenuLeave() " [routerLink]="['/' + o.routerLink]"
                                 class="{{ rla.isActive ? 'typeOpt' : ' optMenu typeOpt z'}}" routerLinkActive
                                 [routerLinkActive]="['linkSelect']" href="#">{{o.langT | translate}}</a>
                             <i class="d-none d-md-inline ml-2 mch-color-grey2 {{o.icon ? ifIcon : ''}}"></i>
                         </div>
                         <ul *ngIf="seeMenu" class="ehMobile">
                             <li *ngFor="let s of optionsSubMenu">
-                                <a class="text-left x" (click)="changeRouter(s)" [routerLink]="['/' + s.routerLink]">
+                                <a class="text-left x"  [routerLink]="['/' + s.routerLink]">
                                     <div class="panelElementMenu">
                                         <div class="menu-content">
                                             <label class="mch-fs-13 titleMenu">{{s.langT | translate}}</label>
