ajustes descrição sobre

--- a/src/app/pages/modulos/about/about.component.html
+++ b/src/app/pages/modulos/about/about.component.html
@@ -8,7 +8,6 @@
                     <img class="imgProfile" src="./assets/profile.jpg" alt="profile">
                 </div>
 
-                <!-- <div [innerHTML]=""></div> -->
                 <div [innerHTML]="translatedText"
                     class="mt-4 mt-md-0 d-flex flex-column  mt-md-0 col-12 col-md-8 mch-color-grey2  desc bline">
                 </div>
@@ -20,7 +19,7 @@
                 <div class="mt-4 col-12 col-md-12 title"><!-- titulo -->
                     <p class="title">{{"CAREER" | translate}}</p>
                 </div>
-                <div class="col-12 col-md-12 mch-c"><!-- subtilo -->
+                <div class="col-12 col-md-12 mch-c"><!-- subtitulo -->
                     <h5>{{"DEV-DESC" | translate}}</h5>
                     <label class="bline mch-color-grey2"><a href="http://fegit.com.br/" target="_blank"
                             class="mch-color-white"><span class="mch-color-grey2">FegIt</span></a> • Barueri, SP
