--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -51,7 +51,7 @@
                         <span class="mch-fs-10 pi pi-download"></span>
                         <!-- {{ typedText }} -->
                     </a>
-                    <a (mouseenter)="menu.toggle($event)" class="ml-0 ml-md-4  headerIcon  mt-4 pi pi-language"></a>
+                    <a (mouseenter)="mm($event)" class="ml-0 ml-md-4  headerIcon  mt-4 pi pi-language"></a>
                 </ul>
 
                 <div class="  ml-0 ml-md-3 btn-navbar mt-4" [routerLink]="['/home']">{{"HOME" | translate}}</div>
