adjuste aboute - TIMEWERE

--- a/src/app/pages/modulos/about/about.component.html
+++ b/src/app/pages/modulos/about/about.component.html
@@ -27,8 +27,17 @@
                     <p class="mch-color-grey2">{{"DATECAREER" | translate}}</p>
 
                 </div>
+                <div class="col-12 content">
+                    <hr class="divider">
+                </div>
+                <div class="col-12 col-md-12 mch-c"><!-- subtitulo -->
+                    <h5>{{"DEV-DESC2" | translate}}</h5>
+                    <label class="bline mch-color-grey2"><a href="https://www.timeware.com.br" target="_blank" class="mch-color-white"><span
+                                class="mch-color-grey2">Timeware</span></a> • São Paulo, SP
+                    </label>
+                    <p class="mch-color-grey2">{{"DATECAREER2" | translate}}</p>
 
-
+                </div>
             </div>
 
 
